--- a/slides/main-slide.mdx
+++ b/slides/main-slide.mdx
@@ -1,6 +1,9 @@
 import {
   IntroductionLayout,
   CodeLayout,
+  CodeViewer,
+  MermaidViewer,
+  CodeDescription,
   WhiteColumnLayout,
   WhiteLayout,
   Image,
@@ -20,6 +23,7 @@ import netcompanyService from "./assets/netcompany-service.png";
 import programmingParadigms from "./assets/programming_paradigms.png";
 import Dazzle_icon from "./assets/Dazzle_icon.webp";
 import Huskar_icon from "./assets/Huskar_icon.webp";
+import Invoker_icon from "./assets/Invoker_icon.webp";
 import redDash from "./assets/red-dash.png";
 import feature1 from "./assets/feature/feature1.png";
 import feature2 from "./assets/feature/feature2.png";
@@ -30,6 +34,10 @@ import feature6 from "./assets/feature/feature6.png";
 import feature7 from "./assets/feature/feature7.png";
 
 export const theme = netcompanyTheme;
+
+hello
+
+---
 
 <Head>
   <title>JAVA OOP ORIENTATION</title>
@@ -266,47 +274,22 @@ Meet his GPA management app:
 
 ---
 
-<CodeLayout title={"The case study"}>
-
-```java 795:827 file=../src/main/java/com/netcompany/Main.java showNumbers
-
-```
-
-```java 586:614 file=../src/main/java/com/netcompany/Main.java showNumbers
-
-```
-
-```java 616:644 file=../src/main/java/com/netcompany/Main.java showNumbers
-
-```
-
-```java 665:722 file=../src/main/java/com/netcompany/Main.java showNumbers
-
-```
-
-```java 724:746 file=../src/main/java/com/netcompany/Main.java showNumbers
-
-```
-
-</CodeLayout>
-
----
-
 <WhiteColumnLayout title={"The case study"} sizes={[4,3]} colors={['#fff','#0f2147']} texts={['#0f2147','#fff']}>
 <LayoutColumn>
 
 ### Context
 
 Greeting Dazzle's best friend, Huskar
-<ListerSteps>
+
+<ListerSteps showFirstItem={true}>
 
 - He is Dazzle's bestie
 
 - He has a huge passion with programming
 
-- His programming skill is not as good as Dazzle 
+- His programming skill is not as good as Dazzle
 
-- He is a loyal user of Dazzle's App 
+- He is a loyal user of Dazzle's App
 
 - He shared a lot of ideas about this App and wants to help Dazzle to build up this App
 
@@ -332,6 +315,754 @@ Greeting Dazzle's best friend, Huskar
 
 ---
 
+<WhiteLayout title={"The case study"}>
+
+### Context
+
+#### In the very first day, they facing some collaboration problems
+
+- It's take Dazzle a while to onboard Huskar to the project
+
+</WhiteLayout>
+
+---
+
+<CodeLayout title={"The case study"} subTitle={"Context"}>
+
+```java 586:614 file=../src/main/java/com/netcompany/Main.java showNumbers
+
+```
+
+```java 616:644 file=../src/main/java/com/netcompany/Main.java showNumbers
+
+```
+
+```java 665:722 file=../src/main/java/com/netcompany/Main.java showNumbers
+
+```
+
+```java 724:746 file=../src/main/java/com/netcompany/Main.java showNumbers
+
+```
+
+```java 795:827 file=../src/main/java/com/netcompany/Main.java showNumbers
+
+```
+
+</CodeLayout>
+
+---
+
+<WhiteLayout title={"The case study"}>
+
+### Context
+
+#### In the very first day, they facing some collaboration problems
+
+- It's take Dazzle a while to onboard Huskar to the project
+
+<ListerSteps showFirstItem={true}>
+
+- There is major file conflict for every new feature they develop together
+
+- Duplicated code everywhere
+
+- **Take time to develop features concurrently**
+
+</ListerSteps>
+
+</WhiteLayout>
+
+---
+
+<WhiteColumnLayout title={"The case study"} sizes={[4,3]} colors={['#fff','#0f2147']} texts={['#0f2147','#fff']}>
+<LayoutColumn>
+
+### Context
+
+Dazzle and Huskar try to get help from a senior student, Invoker. He's give them some advises:
+
+- Re-organize their code so the human can read easyly.
+
+- Using OOP as a fundamental tool to refactor their project.
+
+- Conduct a human friendly code structure and arrange classes into it.
+
+**_Let follow their journey to build-up a maintainable project._**
+
+</LayoutColumn>
+<LayoutColumn>
+<div
+  style={{
+    display: "flex",
+    justifyContent: "start",
+    alignItems: "center",
+    paddingTop: "2em",
+    flex: 1,
+    width: "100%",
+    flexDirection:"column"
+  }}
+>
+  <img src={Dazzle_icon} alt="dazzle" />
+  <img src={Huskar_icon} style={{marginTop:"2em"}} alt="huskar" />
+  <img src={Invoker_icon} style={{marginTop:"2em"}} alt="invoker" />
+</div>
+</LayoutColumn>
+</WhiteColumnLayout>
+
+---
+
+<WhiteLayout title={"The case study"}>
+
+### Abstraction - The foundation of the OOP
+
+- Seperate <ins>WHAT</ins> from <ins>HOW</ins>
+
+- <ins>Hide the complex</ins> behide the <ins>Abstraction</ins>
+
+- Focus on <ins>high-level idea</ins>, seperately from the <ins>low-level details</ins>
+
+</WhiteLayout>
+
+---
+
+<WhiteColumnLayout title={"The case study"} sizes={[3,4]} colors={['#fff','#0f2147']} texts={['#0f2147','#fff']}>
+<LayoutColumn>
+
+### Abstraction - The foundation of the OOP
+
+- Seperate <ins>WHAT</ins> from <ins>HOW</ins>
+
+<MermaidViewer>
+
+```mermaid
+classDiagram
+  class Menu {
+      <<interface>>
+      +MenuItem[] menuItems
+  }
+
+  class MenuItem {
+      <<interface>>
+      +String itemName
+  }
+
+  Menu--MenuItem
+```
+
+```mermaid
+classDiagram
+  class MenuItem {
+      <<interface>>
+      +String itemName
+  }
+
+  class Service {
+      <<interface>>
+  }
+
+  MenuItem--Service
+```
+
+```mermaid
+classDiagram
+  class MenuItem {
+      <<interface>>
+      +String itemName
+  }
+
+  class Service {
+      <<interface>>
+  }
+
+  class Repository {
+      <<interface>>
+  }
+
+  MenuItem--Service
+  Service--Repository
+```
+
+</MermaidViewer>
+</LayoutColumn>
+<LayoutColumn>
+<div
+  style={{
+    display: "flex",
+    flex: 1,
+    width: "100%",
+    flexDirection:"column"
+  }}
+>
+<CodeViewer>
+
+```java 616:635 file=../src/main/java/com/netcompany/Main.java showNumbers zoomIn=1.5
+
+```
+
+```java 481:509 file=../src/main/java/com/netcompany/Main.java showNumbers zoomIn=1.1
+
+```
+
+```java 636:642 file=../src/main/java/com/netcompany/Main.java showNumbers zoomIn=1.5
+
+```
+
+</CodeViewer>
+</div>
+</LayoutColumn>
+</WhiteColumnLayout>
+
+---
+
+<WhiteColumnLayout title={"The case study"} sizes={[3,4]} colors={['#fff','#0f2147']} texts={['#0f2147','#fff']}>
+<LayoutColumn>
+
+### Abstraction - The foundation of the OOP
+
+- <ins>Hide the complex</ins> behide the <ins>Abstraction</ins>
+
+<MermaidViewer>
+
+```mermaid
+classDiagram
+    class Menu {
+        <<interface>>
+        +MenuItem[] menuItems
+        +launch()
+    }
+
+    class AbstractMenu {
+        <<abstract class>>
+        +launchMenuItem(int index)
+    }
+
+    Menu<|--AbstractMenu
+```
+
+```mermaid
+classDiagram
+    class Menu {
+        <<interface>>
+        +MenuItem[] menuItems
+        +launch()
+    }
+
+    class AbstractMenu {
+        <<abstract class>>
+        -checkUserChoise(String userChoise)
+        +launchMenuItem(int index)
+    }
+
+    Menu<|--AbstractMenu
+```
+
+```mermaid
+classDiagram
+    class Menu {
+        <<interface>>
+        +MenuItem[] menuItems
+        +launch()
+    }
+
+    class AbstractMenu {
+        <<abstract class>>
+        +String selectInstruction
+        -checkUserChoise(String userChoise)
+        +launchMenuItem(int index)
+    }
+
+    Menu<|--AbstractMenu
+```
+
+```mermaid
+classDiagram
+    class Menu {
+        <<interface>>
+        +String menuHeader
+        +MenuItem[] menuItems
+        +launch()
+    }
+
+    class AbstractMenu {
+        <<abstract class>>
+        +String selectInstruction
+        -checkUserChoise(String userChoise)
+        +launchMenuItem(int index)
+    }
+
+    Menu<|--AbstractMenu
+```
+
+```mermaid
+classDiagram
+    class Menu {
+        <<interface>>
+        +String menuHeader
+        +MenuItem[] menuItems
+        +launch()
+    }
+    class AbstractMenu {
+        <<abstract class>>
+        +String backItem
+        +String selectInstruction
+        -checkUserChoise(String userChoise)
+        +launchMenuItem(int index)
+    }
+
+    Menu<|--AbstractMenu
+```
+
+```mermaid
+classDiagram
+    class Menu {
+        <<interface>>
+        +String menuHeader
+        +MenuItem[] menuItems
+        +launch()
+    }
+    class AbstractMenu {
+        <<abstract class>>
+        +backItem
+        +selectInstruction
+        -checkUserChoise(String userChoise)
+        +launchMenuItem(int index)
+    }
+    class MainMenu {
+    }
+
+    Menu<|--AbstractMenu
+    AbstractMenu<|--MainMenu
+```
+
+</MermaidViewer>
+</LayoutColumn>
+<LayoutColumn>
+<div
+  style={{
+    display: "flex",
+    flex: 1,
+    width: "100%"
+  }}
+>
+<CodeViewer>
+
+```java 805:808 file=../src/main/java/com/netcompany/Main.java showNumbers zoomIn=1.5
+
+```
+
+```java 287:288 file=../src/main/java/com/netcompany/Main.java showNumbers zoomIn=1.5
+
+```
+
+```java 285 file=../src/main/java/com/netcompany/Main.java showNumbers zoomIn=2
+
+```
+
+```java 802:803 file=../src/main/java/com/netcompany/Main.java showNumbers zoomIn=1.6
+
+```
+
+```java 279:283 file=../src/main/java/com/netcompany/Main.java showNumbers zoomIn=1.9
+
+```
+
+```java 10:30 file=../src/main/java/com/netcompany/menu/MainMenu.java zoomIn=1.5
+
+```
+
+</CodeViewer>
+</div>
+</LayoutColumn>
+</WhiteColumnLayout>
+
+---
+
+<WhiteColumnLayout title={"The case study"} sizes={[3,4]} colors={['#fff','#0f2147']} texts={['#0f2147','#fff']}>
+<LayoutColumn>
+
+### Abstraction - The foundation of the OOP
+
+- Focus on <ins>high-level idea</ins>, seperately from the <ins>low-level details</ins>
+
+<MermaidViewer>
+
+```mermaid
+classDiagram
+
+    class Menu {
+        <<interface>>
+        +String menuHeader
+        +MenuItem[] menuItems
+        +launch()
+    }
+    class AbstractMenu {
+        <<abstract class>>
+        +backItem
+        +selectInstruction
+        -checkUserChoise(String userChoise)
+        +launchMenuItem(int index)
+    }
+
+    class MainMenu {
+    }
+
+    class ManageGradeMenu {
+    }
+
+    class ManageCourseMenu {
+    }
+
+    class ManageBalanceSheetMenu {
+    }
+
+    class NewBalanceSheetMenu {
+    }
+
+    Menu<|--AbstractMenu
+    AbstractMenu<|--MainMenu
+    AbstractMenu<|--ManageGradeMenu
+    AbstractMenu<|--ManageCourseMenu
+    AbstractMenu<|--NewBalanceSheetMenu
+    AbstractMenu<|--ManageBalanceSheetMenu
+
+```
+
+</MermaidViewer>
+</LayoutColumn>
+<LayoutColumn>
+<div
+  style={{
+    display: "flex",
+    flex: 1,
+    width: "100%"
+  }}
+>
+<CodeViewer>
+
+```java 801:824 file=../src/main/java/com/netcompany/Main.java showNumbers zoomIn=1.3
+
+```
+
+</CodeViewer>
+</div>
+</LayoutColumn>
+</WhiteColumnLayout>
+
+---
+
+<WhiteColumnLayout title={"The case study"} sizes={[3,4]} colors={['#fff','#0f2147']} texts={['#0f2147','#fff']}>
+<LayoutColumn>
+
+### Abstraction - The foundation of the OOP
+
+- Focus on <ins>high-level idea</ins>, seperately from the <ins>low-level details</ins>
+
+<MermaidViewer>
+
+```mermaid
+classDiagram
+
+    class MenuItem {
+        <<interface>>
+        +String itemName
+    }
+
+    class MainMenu {
+    }
+
+    class ManageGradeMenu {
+    }
+
+    class ManageCourseMenu {
+    }
+
+    class ManageBalanceSheetMenu {
+    }
+
+    class NewBalanceSheetMenu {
+    }
+
+    MainMenu--ManageGradeMenu
+    MainMenu--ManageCourseMenu
+    MainMenu--NewBalanceSheetMenu
+    MainMenu--ManageBalanceSheetMenu
+    ManageGradeMenu--|>MenuItem
+    ManageCourseMenu--|>MenuItem
+    NewBalanceSheetMenu--|>MenuItem
+    ManageBalanceSheetMenu--|>MenuItem
+
+```
+
+</MermaidViewer>
+</LayoutColumn>
+<LayoutColumn>
+<div
+  style={{
+    display: "flex",
+    flex: 1,
+    width: "100%"
+  }}
+>
+<CodeViewer>
+
+```java 801:824 file=../src/main/java/com/netcompany/Main.java showNumbers zoomIn=1.3
+
+```
+
+</CodeViewer>
+</div>
+</LayoutColumn>
+</WhiteColumnLayout>
+
+---
+
+<WhiteLayout title={"The case study"}>
+### Abstraction - The foundation of the OOP
+
+- Focus on <ins>high-level idea</ins>, seperately from the <ins>low-level details</ins>
+
+<MermaidViewer>
+
+```mermaid
+classDiagram
+
+    MainMenu--ManageCourseMenu
+    MainMenu--ManageGradeMenu
+    MainMenu--NewBalanceSheetMenu
+    MainMenu--ManageBalanceSheetMenu
+
+    ManageCourseMenu--AddCourseFeature
+    ManageCourseMenu--RemoveCourseFeature
+    ManageCourseMenu--ShowCourseFeature
+
+    AddCourseFeature--|>MenuItem
+    RemoveCourseFeature--|>MenuItem
+    ShowCourseFeature--|>MenuItem
+```
+
+```mermaid
+classDiagram
+    MainMenu--ManageCourseMenu
+    MainMenu--ManageGradeMenu
+    MainMenu--NewBalanceSheetMenu
+    MainMenu--ManageBalanceSheetMenu
+
+    ManageGradeMenu--CleanGradeFeature
+    ManageGradeMenu--UpdateGradeFeature
+    ManageGradeMenu--ShowCourseFeature
+
+    CleanGradeFeature--|>MenuItem
+    UpdateGradeFeature--|>MenuItem
+    ShowCourseFeature--|>MenuItem
+```
+
+```mermaid
+classDiagram
+
+    MainMenu--ManageCourseMenu
+    MainMenu--ManageGradeMenu
+    MainMenu--NewBalanceSheetMenu
+    MainMenu--ManageBalanceSheetMenu
+
+    NewBalanceSheetMenu--AdjustBalanceSheetFeature
+    NewBalanceSheetMenu--CleanBalanceSheetAdjustmentFeature
+    NewBalanceSheetMenu--PersistBalanceSheetFeature
+    NewBalanceSheetMenu--ResetBalanceSheetFeature
+    NewBalanceSheetMenu--UpdateBalancingExpectedGpaFeature
+    NewBalanceSheetMenu--ShowBalanceSheetDetailFeature
+
+    AdjustBalanceSheetFeature--|>MenuItem
+    CleanBalanceSheetAdjustmentFeature--|>MenuItem
+    PersistBalanceSheetFeature--|>MenuItem
+    ResetBalanceSheetFeature--|>MenuItem
+    UpdateBalancingExpectedGpaFeature--|>MenuItem
+    ShowBalanceSheetDetailFeature--|>MenuItem
+```
+
+```mermaid
+classDiagram
+
+    MainMenu--ManageGradeMenu
+    MainMenu--ManageCourseMenu
+    MainMenu--NewBalanceSheetMenu
+    MainMenu--ManageBalanceSheetMenu
+
+    ManageBalanceSheetMenu--RemoveSavedBalanceSheetFeature
+    ManageBalanceSheetMenu--ShowSavedBalanceSheetFeature
+
+    RemoveSavedBalanceSheetFeature--ShowBalanceSheetDetailFeature
+    ShowSavedBalanceSheetFeature--ShowBalanceSheetDetailFeature
+
+    RemoveSavedBalanceSheetFeature--|>MenuItem
+    ShowSavedBalanceSheetFeature--|>MenuItem
+    ShowBalanceSheetDetailFeature--|>MenuItem
+
+```
+
+</MermaidViewer>
+</WhiteLayout>
+
+---
+
+<WhiteLayout title={"The case study"}>
+### Abstraction - The foundation of the OOP
+
+- Focus on <ins>high-level idea</ins>, seperately from the <ins>low-level details</ins>
+
+<MermaidViewer>
+
+```mermaid
+classDiagram
+    class GpaBalancingService {
+      - GpaBalanceSheetRepository gpaBalancingRepository
+      - CourseRepository courseRepository
+      + BalanceSheet createNewBalanceSheet(float expectedGpa)
+      + float calculateCurrentGpa(BalanceSheet balanceSheet)
+      + Float calculateNeededGrade(BalanceSheet balanceSheet)
+      + updateBalanceCourse(BalanceSheet balanceSheet, String courseCode, float adjustedGrade)
+      + saveBalanceSheet(BalanceSheet balanceSheet)
+      + removeBalanceSheet(BalanceSheet balanceSheet)
+      + BalanceSheet findBalanceSheetWithCreatedTime(long createdTime)
+      + ValidationResult checkExist(long createdTime)
+      + resetBalanceCourse(BalanceSheet currentBalanceSheet, String courseCode)
+      + resetBalanceSheet(BalanceSheet balanceSheet)
+      + BalanceSheet[] getSavedBalanceSheets()
+    }
+    class CourseService {
+      - CourseRepository courseRepository
+      + Course findCourseByCode(String code)
+      + ValidationResult checkValidCourseCode(String courseCode)
+      + ValidationResult checkNotExistCourseCode(String courseCode)
+      + ValidationResult checkExistCourseCode(String courseCode)
+      + ValidationResult checkCourseGrade(Float gradeValue)
+      + addNewCourse(Course course)
+      + updateCourse(Course course)
+      + Course removeCourse(String courseCode)
+      + cleanCourseGrade(String courseCode)
+      + Course[] getAll()
+    }
+    class CourseRepository {
+      - Course[] cached;
+      + add(Course course)
+      + update(Course course)
+      + delete(Course course)
+      + Course findByCode(String courseCode)
+      + Course[] getAll()
+    }
+    class GpaBalanceSheetRepository {
+      - BalanceSheet[] cached;
+      + add(BalanceSheet balanceSheet)
+      + update(BalanceSheet balanceSheet)
+      + delete(BalanceSheet balanceSheet)
+      + BalanceSheet findByCreateOn(long createOn)
+      + BalanceSheet[] getAll()
+    }
+
+    CourseService--CourseRepository
+    GpaBalancingService--CourseRepository
+    GpaBalancingService--GpaBalanceSheetRepository
+
+```
+
+</MermaidViewer>
+</WhiteLayout>
+
+---
+
+<WhiteColumnLayout title={"The case study"} sizes={[4,3]}>
+<LayoutColumn>
+
+### Abstraction - The foundation of the OOP
+
+- Seperate <ins>WHAT</ins> from <ins>HOW</ins>
+
+- <ins>Hide the complex</ins> behide the <ins>Abstraction</ins>
+
+- Focus on <ins>high-level idea</ins>, seperately from the <ins>low-level details</ins>
+
+</LayoutColumn>
+<LayoutColumn>
+<MermaidViewer>
+
+```mermaid
+classDiagram
+  class Menu {
+      <<interface>>
+      +String menuHeader
+      +MenuItem[] menuItems
+      +launch()
+  }
+
+  class MenuItem {
+      <<interface>>
+      +String itemName
+  }
+
+  class Service {
+      <<interface>>
+  }
+
+  class Repository {
+      <<interface>>
+  }
+
+  Menu--MenuItem
+  MenuItem--Service
+  Menu--Service
+  Service--Repository
+```
+
+</MermaidViewer>
+</LayoutColumn>
+</WhiteColumnLayout>
+
+---
+
+<WhiteLayout title={"The case study"}>
+
+### Abstraction - It's not just the domain objects
+
+<MermaidViewer>
+
+```mermaid
+classDiagram
+  class Course {
+    + String code
+    + Float grade
+  }
+
+  class BalancingCourse {
+    + Float adjustedGrade
+  }
+
+  class BalanceSheet {
+    + BalancingCourse[] courses
+    + float expectedGpa
+    + long createdOn
+    + float calculateCurrentGpa()
+    + Float calculateNeededGrade()
+  }
+  
+  Course<|--BalancingCourse
+  BalanceSheet--BalancingCourse
+```
+
+</MermaidViewer>
+</WhiteLayout>
+
+---
+
+<WhiteLayout title={"The case study"}>
+
+### Encapsulation - The state management for the Objects
+
+-
+
+</WhiteLayout>
+
+---
+
 <SectionHeadLayout title={"Example from real projects"} />
 
 ---
@@ -353,3 +1084,42 @@ Greeting Dazzle's best friend, Huskar
 ---
 
 <SectionHeadLayout title={"Practical"} />
+
+---
+
+<WhiteLayout title={"Practical"}>
+
+## Opal tower Parking Management System
+
+**Business:** OPAL Tower is a modern building which has 41 floors and 4 basements, including high-class apartments, offices and convenient and modern shop-houses.
+The owner of building want to have a nice parking management application.
+
+The building has 4 basements, the first 3 basements are preserved for residences and the last one are mixed for both residences, employees and visitors.
+Each basement has 100 parking slots for cars and a separated area for motorbikes.
+There is a LED panel at the entry displaying how many slots (for car) available at the moment.
+
+For residences and employees, they have to register their vehicles beforehand by providing owner's information, vehicle info. These info will be stored in a small card used for check-in/check-out. User must present this card for check-in/out.
+For visitor, card will be provided when check-in and returned to parking attendant when check out
+Parking fee for residences and employees is a fix amount and charged monthly. For visitors, the fee is calculated by block rate and be payed at check-out by cash.
+
+- For motorbike: 4k for first block 4 hours, 1k for each next hour.
+- For car: 40k for first 4 hours, 20k for each next hour.
+
+</WhiteLayout>
+
+---
+
+<WhiteLayout title={"Practical"}>
+
+## Opal tower Parking Management System
+
+### Requirements
+
+Use object-oriented programming to build a simple parking management application.
+
+- Identify the customers, vehicles that application supports.
+- Identify objects, their properties and methods name.
+- Describe relationship of objects, object hierarchy.
+- Describe detail of check-in and check-out flow/steps.
+
+</WhiteLayout>
